Creación y validación Instituciones

--- a/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
+++ b/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
@@ -309,7 +309,12 @@
          
         </ul>
       </li><!-- End Forms Nav -->
-
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#chacrts-nav" data-bs-toggle="collapse" href="#" (click)="goToRegInsti($event)">
+          <i class="bi bi-award"></i><span>Institución</span>
+        </a>
+       
+      </li>
     
 
     
